# Discord_Bot

./: DB.py  README.md  bot.py  data.sqlite  db_test.py  main.py  pyproject.toml  replit-deploy.json
